Fix date alignment in posts lists

--- a/stylus/pages/index.styl
+++ b/stylus/pages/index.styl
@@ -6,6 +6,7 @@
     left 0
     padding-right 0
 
+    align-items baseline
     justify-content space-between
 
     @media all and (max-width bp-small)
